# arweave-dumper

./: Cargo.toml  README.md
res/: first_item.hex  first_item_tags.hex  uYpAeGCj8Xe_J0sKiZ_aJ4Zl1zQLgDH5ia-pqtNLJEA_data.hex
src/: arweave.rs  async_json.rs  avro.rs  bundle.rs  lib.rs
