[package]
name = "arweave-dumper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
apache-avro = "0.17.0"
arweave-rs = "0.2.0"
async-stream = "0.3.5"
clap = { version = "4.5.13" ,  features=["derive"]}
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
reqwest = "0.12.5"
serde = "1.0.207"
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["macros"] }
